--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 
 /*-------------------------------------------  general -------------------------------------------------------*/
 body{
+	background-image: url("../img/background.gif"); 
 	font-size: 62.5%;
 	font-family: helvetica, arial, sans-serif;
 	color:#545257; /*changes color of the whole text*/
 	margin-top: 0;
 }
 #wrapper{
+	background-image: url("../img/wrapper.jpg");
 	width:960px;
 	margin: 0 auto;
 	padding-left: 1%;
@@ -14,6 +16,7 @@ body{
 	-webkit-box-shadow: 0px 0px 5px #ececec;
 	-moz-box-shadow:    0px 0px 5px #ececec;
 	box-shadow:         0px 0px 5px #ececec;
+	text-align: center; 
 
 }
 /*-------------------------------------------  header -------------------------------------------------------*/
@@ -24,9 +27,15 @@ header{
 h1{
 	margin-top: 0;
 	padding-top: 10px;
+	color: #ffffff;
+	font-size: 2.5em; 
+	text-align: center; 
 }
 h2{
 	margin-top: 20px;
+	color: #ffffff;
+	font-size: 2.0em;
+	text-align: center;
 }
 /*-------------------------------------------  table -------------------------------------------------------*/
 table{
@@ -61,29 +70,26 @@ td:first-child{
 }
 /*-------------------------------------------  top section-------------------------------------------------------*/
 .main{
-
-	overflow: auto;
-	/*border-bottom: 1px solid #bbb8bf;*/
+	border-bottom: 1px solid #bbb8bf; 
 }
-.main p{
+p{
 	width: 67.5%;
-	float: left;
-	font-size: 1.4em;
-
+	font-size: 1.5em;
+	color: #666666;
+	text-align: center; 
+	margin: 15px 20px 20px 0;
+	
 }
 .main figure{
-	float: right;
 	margin: 15px 0 20px 0;
-	width: 30%;
-
+	width: 40%;
 }
-figure img{
-	width: 100%;
+img{
+	border: 2px solid #ffffff;
+	border-radius: 2em 2em; 
 }
 .sec{
-	clear: both;
 	margin-top: 40px;
-	
 }
 
 /*-------------------------------------------  links -------------------------------------------------------*/
@@ -101,7 +107,7 @@ footer{
 	margin-top: 20px;
 	margin-bottom: 20px;
 	padding-bottom: 20px;
-	text-align: center;
+	text-align: center; 
 	width: 90%;
 }
 /* ------------------------------------------- Media Queries -------------------------------------------------------*/
