--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,6 @@ body{
 	-webkit-box-shadow: 0px 0px 5px #ececec;
 	-moz-box-shadow:    0px 0px 5px #ececec;
 	box-shadow:         0px 0px 5px #ececec;
-	text-align: center; 
 
 }
 /*-------------------------------------------  header -------------------------------------------------------*/
@@ -35,7 +34,6 @@ h2{
 	margin-top: 20px;
 	color: #ffffff;
 	font-size: 2.0em;
-	text-align: center;
 }
 /*-------------------------------------------  table -------------------------------------------------------*/
 table{
@@ -59,24 +57,23 @@ th{
 	background: #bbbcc0; /*changes color of table hd background*/
 }
 th:first-child{
-	/*border-right: 1px solid #6a7680;*/
+	border-right: 1px solid #6a7680;
 }
 td{
 	padding: 1em 1em;
 	width: 69%;
 }
 td:first-child{
-	/*border-right: 1px solid #6a7680;*/
+	border-right: 1px solid #6a7680;
 }
 /*-------------------------------------------  top section-------------------------------------------------------*/
 .main{
 	border-bottom: 1px solid #bbb8bf; 
 }
-p{
+.main p{
 	width: 67.5%;
 	font-size: 1.5em;
-	color: #666666;
-	text-align: center; 
+	color: #666666; 
 	margin: 15px 20px 20px 0;
 	
 }
